Upgrade Project Keeper (#45)